src/styles/Param.scss
@import './global.scss';

.btn {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
}

.blueWordBtn {
  @extend .btn;
  font: 13px 'Roboto', sans-serif !important;
  border-radius: 1px;
  text-align: center;
  position: relative;
  cursor: pointer;
  text-transform: uppercase;
  padding: 6px;
  color: var(--mid-control-param-blue-btn-col);
}

.blueWordBtn:hover {
  transition: 0.4s;
  background: var(--mid-control-param-btn-bg-col-hover);
}
.blueWordBtn:active {
  transition: 0.2s;
  background: var(--mid-control-param-btn-bg-col-active);
}

.blueWordBtnDisabled {
  @extend .blueWordBtn;
  color: var(--mid-control-param-btn-disabled);
  cursor: not-allowed !important;
}

.blueWordBtnDisabled:hover {
  background: none;
}
.blueWordBtnDisabled:active {
  background: none;
}
/////////
.greyWordBtn {
  font: 13px 'Roboto', sans-serif !important;
  border-radius: 1px;
  text-align: center;
  position: relative;
  cursor: pointer;
  text-transform: uppercase;
  padding: 6px;
  color: grey;
}

.greyWordBtn:hover {
  transition: 0.4s;
  color: lightgrey;
}

/////////
/// 
.checkbox {
  color: var(--mid-control-font);
  font-size: 0.8em;
  // font: 13px "Roboto", sans-serif !important;
  font-family: Menlo, "Liberation Mono", Courier, monospace;
}

.greyRoundBtn {
  @extend .btn;
  padding: 8px;
  display: flex;
  justify-content: center;
  align-items: center;

  svg {
    width: 12px;
    height: 12px;

    path {
      fill: var(--mid-control-param-grey-btn-col);
    }
  }
}

.greyRoundBtn:hover {
  transition: 0.4s;
  background: var(--mid-control-param-btn-bg-hover);
  @include border-radius(14px);
}
.greyRoundBtn:active {
  transition: 0.2s;
  background: var(--mid-control-param-btn-bg-active);
  @include border-radius(14px);
}
.stringContainer {
  margin-right: 15px;
  padding: 0px 5px;

  }
.inputContainer{
  border: 0.1px solid var(--mid-control-param-border);
  border-radius: 4px;
  // display: flex;
  // align-items: center;
  margin-top: 4px;
  margin-right: 15px;
  padding: 0px 5px;
}


.outerInput {
  border: 1px solid var(--mid-control-param-border);
  border-radius: 4px;
  display: flex;
  align-items: center;
  padding: 6px 10px;

  .inputText {
    width: 100%;

    input {
      width: 100%;
      outline: none;
      font-size: 1.05em;
      font-weight: 200;
      color: var(--mid-control-font);
      border: none;
      padding: 8px 0px;
      background-color: var(--mid-control-bg);
    }
  }

  .btnGrp {
    display: flex;
    justify-content: flex-end;
  }
}

.form {
  color: var(--mid-control-font);
  font-size: 1.05em;
  display: flex;
  justify-content: space-between;

  .formLeft {
    width: 62%;
    align-items: center;
    .rightmost-btn {
      // margin-left: 20px;
      @extend .blueWordBtn;
    }
    .medianthree-btn {
      // margin-left: 20px;
      @extend .blueWordBtn;
    }
    .MuiFormControlLabel-root {
      color: var(--mid-control-param-blue-btn-col);
      &:first-of-type {
        margin-left: 20px;
      }
    }
    .MuiCheckbox-colorPrimary.Mui-checked {
      color: var(--mid-control-param-blue-btn-col);
    }
  }

  .formRight {
    width: 36%;
  }
}

.rightmost-btn {
  margin-left: 20px;
  @extend .blueWordBtn;
}

.medianthree-btn {
  margin-left: 20px;
  @extend .blueWordBtn;
}

.btnDisabled {
  @extend .blueWordBtn;
  cursor: not-allowed !important;
}

.greyRoundBtnDisabled {
  @extend .greyRoundBtn;
  cursor: not-allowed !important;
  svg {
    path {
      fill: var(--mid-control-param-btn-disabled);
    }
  }
}

.greyRoundBtnDisabled:hover {
  background: none;
}
.greyRoundBtnDisabled:active {
  background: none;
}
.generalText {
  color: var(--mid-control-font);
}

.union {
  width: 100%;
  display: flex;
  flex-direction: column;
}
/* Union Find: */
.unionAddInput, .unionTextInput {
  display: flex;
  flex-grow: 1;
  justify-content: space-between;
}

.unionAddInput input:focus, .unionTextInput input:focus {
  outline: none;
}

.unionAddInput input, .unionTextInput input {
  width: 50px;
  height: 25px;
  flex-grow: 0;

  margin-right: 15px;
  border: 0.1px solid var(--mid-control-param-border);
  border-radius: 4px;
  margin-top: 4px;
  margin-bottom: 4px;
  padding:  0px 5px;

  font-family:'Roboto', sans-serif;
  font-size: 1.05em;
  font-weight: 200;
}


.unionTextInput input {
  flex-grow: 1;
  margin-right: 10px;
  height: 35px;
}

